Resolved button sizing issue on iPhone SE

--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -35,7 +35,7 @@ body {
 .scrum-voter-vote {
   position: absolute;
   top: $body-navbar-padding;
-  bottom: 20px;
+  bottom: 0;
   left: 0;
   right: 0;
 }
@@ -68,11 +68,10 @@ body {
 }
 
 .vote-buttons {
-  margin: -10px;
 
   .vote-button {
     padding: 10px;
-    width: 0;
+    width: 1px;
 
     button {
       box-shadow: 1px 1px 4px rgba(0, 0, 0, 0.4);
